# sport_prediction_onext_v2

./: Cargo.toml  README.md
.github/workflows/: release.yml
contracts/hello-world/: Cargo.toml
contracts/hello-world/src/: Constants.rs  bettingTrait.rs  contract.rs  errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/hello-world/src/test/: betting_contract.rs  mod.rs
contracts/hello-world/test_snapshots/test/: test_leaderboard_updates_correctly.1.json
contracts/hello-world/test_snapshots/test/betting_contract/tests/: test_adm_summitter.1.json  test_assess_result.1.json  test_bet_after_game_start.1.json  test_bet_before_game_start.1.json  test_bet_public.1.json  test_cancel.1.json  test_cancel_sameSummiter.1.json  test_claim_money_noactive_public.1.json  test_claim_winner_honest.1.json  test_init_already_initialized.1.json  test_init_success.1.json  test_refund_nosummition.1.json  test_request_result_summiter.1.json  test_request_result_summiter_negative_amount.1.json  test_set_error_result_supreme_court.1.json  test_set_private.1.json  test_set_private_x.1.json  test_set_result_supreme_court.1.json  test_set_result_supreme_court_claim.1.json  test_summit_result.1.json  test_summit_result_unauthorized.1.json
