[package]
name = "betting_contract"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]
doctest = false


[dependencies]
soroban-sdk = { version = "23.0.1" }

ed25519-dalek = { version = "1.0.1" }
rand = { version = "0.7.3" }
[dev-dependencies]
soroban-sdk = { version = "23.0.1", features = ["testutils"] }
[features]
testutils = ["soroban-sdk/testutils"]